✨ feat(teacher-workspace): 增加通用测评模块到教师工作台
- 在教师工作台概览页面新增测评发布区段，展示近期发布的任务
- 扩展工作台数据统计指标，增加试卷数、活跃发布数和待收卷数
- 为工作台空状态和引导项添加测评相关的提示与跳转链接
- 更新前端合约类型定义以支持新的测评相关字段

✨ feat(assessment): 新增学生测评历史分页查询和发布详情页

- 新增学生测评历史分页API，支持按状态筛选和分页查询
- 新增教师端发布详情页，展示学生名册、完成情况和统计指标
- 新增教师端学生答卷详情页，展示题目级结果与对比分析
- 扩展测评服务以支持发布快照、学生名册和答卷结果查询

🔧 chore(assessment): 优化测评作答页面的自动保存和交卷流程

- 改进自动保存机制，增加防抖和后台静默保存
- 优化交卷流程，增加交卷锁定状态和重新提交功能
- 修复页面离开前的保存提示和自动保存时机
- 扩展测评服务以支持后台保持连接的保存请求

♻️ refactor(assessment): 重构发布统计和学生名册查询逻辑

- 重构发布统计计算逻辑，统一使用快照函数处理状态统计
- 重构学生名册查询，支持按发布ID和学生ID批量查询
- 新增发布接收者快照表和相关数据迁移脚本
- 优化发布详情查询性能，减少数据库查询次数
📦 build(app): 新增前端页面路由和组件
- 新增教师端测评发布详情页面路由和组件
- 新增教师端学生答卷结果页面路由和组件
- 在学生历史页面新增测评历史标签页
- 在学生仪表板新增通用测评任务展示区段
🐛 fix(test): 修复前端测试中的异步渲染问题