@@ -5,6 +5,7 @@ import com.huashi.eftransfer.app.common.util.SecurityUtils;
 import com.huashi.eftransfer.app.modules.analytics.entity.TeachingClassEntity;
 import com.huashi.eftransfer.app.modules.analytics.mapper.TeachingClassMapper;
 import com.huashi.eftransfer.app.modules.analytics.service.TeachingClassService;
+import com.huashi.eftransfer.app.modules.assessment.dto.AssessmentHistoryPageQuery;
 import com.huashi.eftransfer.app.modules.assessment.dto.AssessmentAttemptResponseRequest;
 import com.huashi.eftransfer.app.modules.assessment.dto.AssessmentOptionRequest;
 import com.huashi.eftransfer.app.modules.assessment.dto.AssessmentPaperSaveRequest;
@@ -15,11 +16,13 @@ import com.huashi.eftransfer.app.modules.assessment.entity.AssessmentAttemptAnsw
 import com.huashi.eftransfer.app.modules.assessment.entity.AssessmentAttemptEntity;
 import com.huashi.eftransfer.app.modules.assessment.entity.AssessmentPaperEntity;
 import com.huashi.eftransfer.app.modules.assessment.entity.AssessmentPublishEntity;
+import com.huashi.eftransfer.app.modules.assessment.entity.AssessmentPublishRecipientEntity;
 import com.huashi.eftransfer.app.modules.assessment.entity.AssessmentQuestionEntity;
 import com.huashi.eftransfer.app.modules.assessment.mapper.AssessmentAttemptAnswerMapper;
 import com.huashi.eftransfer.app.modules.assessment.mapper.AssessmentAttemptMapper;
 import com.huashi.eftransfer.app.modules.assessment.mapper.AssessmentPaperMapper;
 import com.huashi.eftransfer.app.modules.assessment.mapper.AssessmentPublishMapper;
+import com.huashi.eftransfer.app.modules.assessment.mapper.AssessmentPublishRecipientMapper;
 import com.huashi.eftransfer.app.modules.assessment.mapper.AssessmentQuestionMapper;
 import com.huashi.eftransfer.app.modules.assessment.support.AssessmentJsonCodec;
 import com.huashi.eftransfer.app.modules.assessment.support.AssessmentOptionPayload;
@@ -34,14 +37,22 @@ import com.huashi.eftransfer.app.modules.assessment.vo.AssessmentOptionVO;
 import com.huashi.eftransfer.app.modules.assessment.vo.AssessmentPaperDetailVO;
 import com.huashi.eftransfer.app.modules.assessment.vo.AssessmentPaperQuestionVO;
 import com.huashi.eftransfer.app.modules.assessment.vo.AssessmentPaperSummaryVO;
+import com.huashi.eftransfer.app.modules.assessment.vo.AssessmentPublishDetailVO;
+import com.huashi.eftransfer.app.modules.assessment.vo.AssessmentPublishRosterItemVO;
 import com.huashi.eftransfer.app.modules.assessment.vo.AssessmentPublishSummaryVO;
+import com.huashi.eftransfer.app.modules.assessment.vo.StudentAssessmentHistorySummaryVO;
 import com.huashi.eftransfer.app.modules.assessment.vo.StudentAssessmentSummaryVO;
+import com.huashi.eftransfer.app.modules.assessment.vo.TeacherAssessmentAttemptResultVO;
+import com.huashi.eftransfer.app.modules.user.entity.UserEntity;
+import com.huashi.eftransfer.app.modules.user.mapper.UserMapper;
 import com.huashi.eftransfer.shared.api.ResultCode;
 import com.huashi.eftransfer.shared.enums.AssessmentAttemptStatus;
 import com.huashi.eftransfer.shared.enums.AssessmentPaperStatus;
 import com.huashi.eftransfer.shared.enums.AssessmentPublishStatus;
 import com.huashi.eftransfer.shared.enums.AssessmentQuestionType;
 import com.huashi.eftransfer.shared.exception.BusinessException;
+import com.huashi.eftransfer.shared.page.PageQuery;
+import com.huashi.eftransfer.shared.page.PageResult;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -49,6 +60,7 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -68,30 +80,36 @@ public class AssessmentService {
     private final AssessmentPaperMapper assessmentPaperMapper;
     private final AssessmentQuestionMapper assessmentQuestionMapper;
     private final AssessmentPublishMapper assessmentPublishMapper;
+    private final AssessmentPublishRecipientMapper assessmentPublishRecipientMapper;
     private final AssessmentAttemptMapper assessmentAttemptMapper;
     private final AssessmentAttemptAnswerMapper assessmentAttemptAnswerMapper;
     private final TeachingClassMapper teachingClassMapper;
     private final TeachingClassService teachingClassService;
     private final AssessmentJsonCodec assessmentJsonCodec;
+    private final UserMapper userMapper;
 
     public AssessmentService(
             AssessmentPaperMapper assessmentPaperMapper,
             AssessmentQuestionMapper assessmentQuestionMapper,
             AssessmentPublishMapper assessmentPublishMapper,
+            AssessmentPublishRecipientMapper assessmentPublishRecipientMapper,
             AssessmentAttemptMapper assessmentAttemptMapper,
             AssessmentAttemptAnswerMapper assessmentAttemptAnswerMapper,
             TeachingClassMapper teachingClassMapper,
             TeachingClassService teachingClassService,
-            AssessmentJsonCodec assessmentJsonCodec
+            AssessmentJsonCodec assessmentJsonCodec,
+            UserMapper userMapper
     ) {
         this.assessmentPaperMapper = assessmentPaperMapper;
         this.assessmentQuestionMapper = assessmentQuestionMapper;
         this.assessmentPublishMapper = assessmentPublishMapper;
+        this.assessmentPublishRecipientMapper = assessmentPublishRecipientMapper;
         this.assessmentAttemptMapper = assessmentAttemptMapper;
         this.assessmentAttemptAnswerMapper = assessmentAttemptAnswerMapper;
         this.teachingClassMapper = teachingClassMapper;
         this.teachingClassService = teachingClassService;
         this.assessmentJsonCodec = assessmentJsonCodec;
+        this.userMapper = userMapper;
     }
 
     public List<AssessmentPaperSummaryVO> listTeacherPapers() {
@@ -165,24 +183,31 @@ public class AssessmentService {
         publish.setDueAt(request.dueAt());
         publish.setPublishedAt(LocalDateTime.now());
         assessmentPublishMapper.insert(publish);
+        snapshotRecipients(publish);
 
         paper.setStatus(AssessmentPaperStatus.PUBLISHED.name());
         paper.setLatestPublishAt(publish.getPublishedAt());
         assessmentPaperMapper.updateById(paper);
 
-        return buildPublishSummary(publish, teachingClass.getClassName(), 0, 0);
+        int assignedCount = loadRecipientsByPublish(publish.getId()).size();
+        return buildPublishSummary(publish, teachingClass.getClassName(), assignedCount, 0, 0);
     }
 
     public List<StudentAssessmentSummaryVO> listStudentAssessments() {
         Long studentUserId = currentUserId();
         LocalDateTime now = LocalDateTime.now();
-        List<Long> classIds = teachingClassService.listActiveClassIdsByStudent(studentUserId, now);
-        if (classIds.isEmpty()) {
+        List<AssessmentPublishRecipientEntity> recipients = assessmentPublishRecipientMapper.selectList(
+                Wrappers.<AssessmentPublishRecipientEntity>lambdaQuery()
+                        .eq(AssessmentPublishRecipientEntity::getStudentUserId, studentUserId)
+                        .orderByDesc(AssessmentPublishRecipientEntity::getPublishId)
+                        .orderByDesc(AssessmentPublishRecipientEntity::getId)
+        );
+        if (recipients.isEmpty()) {
             return List.of();
         }
 
         List<AssessmentPublishEntity> publishes = assessmentPublishMapper.selectList(Wrappers.<AssessmentPublishEntity>lambdaQuery()
-                .in(AssessmentPublishEntity::getTeachingClassId, classIds)
+                .in(AssessmentPublishEntity::getId, recipients.stream().map(AssessmentPublishRecipientEntity::getPublishId).toList())
                 .eq(AssessmentPublishEntity::getStatus, AssessmentPublishStatus.PUBLISHED.name())
                 .orderByDesc(AssessmentPublishEntity::getPublishedAt)
                 .orderByDesc(AssessmentPublishEntity::getId));
@@ -232,6 +257,73 @@ public class AssessmentService {
                     );
                 })
                 .toList();
+    }
+
+    public PageResult<StudentAssessmentHistorySummaryVO> pageStudentHistory(AssessmentHistoryPageQuery query) {
+        PageQuery pageQuery = query.toPageQuery();
+        Long studentUserId = currentUserId();
+        LocalDateTime now = LocalDateTime.now();
+
+        List<AssessmentAttemptEntity> attempts = assessmentAttemptMapper.selectList(Wrappers.<AssessmentAttemptEntity>lambdaQuery()
+                .eq(AssessmentAttemptEntity::getStudentUserId, studentUserId)
+                .orderByDesc(AssessmentAttemptEntity::getStartedAt)
+                .orderByDesc(AssessmentAttemptEntity::getId));
+        if (attempts.isEmpty()) {
+            return new PageResult<>(0, pageQuery.pageNo(), pageQuery.pageSize(), List.of());
+        }
+
+        Map<Long, AssessmentPublishEntity> publishMap = loadPublishMap(
+                attempts.stream().map(AssessmentAttemptEntity::getPublishId).toList()
+        );
+        Map<Long, TeachingClassEntity> classMap = loadTeachingClassMap(
+                publishMap.values().stream()
+                        .map(AssessmentPublishEntity::getTeachingClassId)
+                        .filter(Objects::nonNull)
+                        .toList()
+        );
+
+        List<StudentAssessmentHistorySummaryVO> filtered = attempts.stream()
+                .map(attempt -> {
+                    AssessmentPublishEntity publish = publishMap.get(attempt.getPublishId());
+                    if (publish == null) {
+                        return null;
+                    }
+                    AssessmentAttemptEntity effectiveAttempt = finalizeExpiredAttemptIfNecessary(attempt, publish, now);
+                    if (query.status() != null && !query.status().isBlank()
+                            && !query.status().equalsIgnoreCase(effectiveAttempt.getStatus())) {
+                        return null;
+                    }
+                    TeachingClassEntity teachingClass = classMap.get(publish.getTeachingClassId());
+                    return new StudentAssessmentHistorySummaryVO(
+                            effectiveAttempt.getId(),
+                            publish.getId(),
+                            publish.getPaperId(),
+                            publish.getPaperTitleSnapshot(),
+                            publish.getPaperDescriptionSnapshot(),
+                            teachingClass == null ? "未知班级" : teachingClass.getClassName(),
+                            effectiveAttempt.getStatus(),
+                            publish.getQuestionCountSnapshot(),
+                            effectiveAttempt.getAnsweredCount(),
+                            effectiveAttempt.getObjectiveScore(),
+                            effectiveAttempt.getTotalScore(),
+                            effectiveAttempt.getStartedAt(),
+                            effectiveAttempt.getLastSavedAt(),
+                            effectiveAttempt.getExpiresAt(),
+                            effectiveAttempt.getSubmittedAt()
+                    );
+                })
+                .filter(Objects::nonNull)
+                .toList();
+
+        int total = filtered.size();
+        long fromIndex = Math.min(pageQuery.offset(), total);
+        long toIndex = Math.min(fromIndex + pageQuery.pageSize(), total);
+        return new PageResult<>(
+                total,
+                pageQuery.pageNo(),
+                pageQuery.pageSize(),
+                filtered.subList((int) fromIndex, (int) toIndex)
+        );
     }
 
     @Transactional
@@ -396,6 +488,115 @@ public class AssessmentService {
         );
     }
 
+    public AssessmentPublishDetailVO getPublishDetail(Long publishId) {
+        AssessmentPublishEntity publish = requireAccessiblePublishForTeacher(publishId);
+        LocalDateTime now = LocalDateTime.now();
+        TeachingClassEntity teachingClass = teachingClassMapper.selectById(publish.getTeachingClassId());
+        List<AssessmentPublishRecipientEntity> recipients = loadRecipientsByPublish(publishId);
+        Map<Long, AssessmentAttemptEntity> attemptByStudentId = loadAttemptMapByPublishAndStudent(publishId, recipients);
+        Map<Long, String> studentNameMap = loadUserDisplayNameMap(
+                recipients.stream().map(AssessmentPublishRecipientEntity::getStudentUserId).toList()
+        );
+
+        List<AssessmentPublishRosterItemVO> roster = new ArrayList<>();
+        int submittedCount = 0;
+        int inProgressCount = 0;
+        int totalSubmittedScore = 0;
+
+        for (AssessmentPublishRecipientEntity recipient : recipients) {
+            AssessmentAttemptEntity attempt = attemptByStudentId.get(recipient.getStudentUserId());
+            AssessmentAttemptEntity effectiveAttempt = attempt == null
+                    ? null
+                    : finalizeExpiredAttemptIfNecessary(attempt, publish, now);
+            String status = effectiveAttempt == null ? "NOT_STARTED" : effectiveAttempt.getStatus();
+            if (AssessmentAttemptStatus.SUBMITTED.name().equalsIgnoreCase(status)) {
+                submittedCount++;
+                totalSubmittedScore += effectiveAttempt.getTotalScore() == null ? 0 : effectiveAttempt.getTotalScore();
+            } else if (AssessmentAttemptStatus.IN_PROGRESS.name().equalsIgnoreCase(status)) {
+                inProgressCount++;
+            }
+            roster.add(new AssessmentPublishRosterItemVO(
+                    recipient.getStudentUserId(),
+                    studentNameMap.getOrDefault(recipient.getStudentUserId(), "未知学生"),
+                    status,
+                    effectiveAttempt == null ? null : effectiveAttempt.getId(),
+                    effectiveAttempt == null ? null : effectiveAttempt.getAnsweredCount(),
+                    publish.getQuestionCountSnapshot(),
+                    effectiveAttempt == null ? null : effectiveAttempt.getObjectiveScore(),
+                    effectiveAttempt == null ? null : effectiveAttempt.getTotalScore(),
+                    effectiveAttempt == null ? null : effectiveAttempt.getStartedAt(),
+                    effectiveAttempt == null ? null : effectiveAttempt.getExpiresAt(),
+                    effectiveAttempt == null ? null : effectiveAttempt.getSubmittedAt(),
+                    effectiveAttempt == null ? null : effectiveAttempt.getLastSavedAt()
+            ));
+        }
+
+        roster.sort(Comparator
+                .comparing(AssessmentPublishRosterItemVO::attemptStatus, Comparator.nullsLast(String::compareToIgnoreCase))
+                .thenComparing(AssessmentPublishRosterItemVO::studentName, Comparator.nullsLast(String::compareToIgnoreCase)));
+
+        int assignedCount = recipients.size();
+        int notStartedCount = Math.max(0, assignedCount - submittedCount - inProgressCount);
+        Double averageScore = submittedCount == 0 ? null : (double) totalSubmittedScore / submittedCount;
+        return new AssessmentPublishDetailVO(
+                publish.getId(),
+                publish.getPaperId(),
+                publish.getPaperTitleSnapshot(),
+                publish.getPaperDescriptionSnapshot(),
+                publish.getTeachingClassId(),
+                teachingClass == null ? "未知班级" : teachingClass.getClassName(),
+                publish.getStatus(),
+                publish.getDurationMinutes(),
+                publish.getQuestionCountSnapshot(),
+                publish.getTotalScoreSnapshot(),
+                publish.getInstructionsText(),
+                publish.getStartsAt(),
+                publish.getDueAt(),
+                publish.getPublishedAt(),
+                assignedCount,
+                notStartedCount,
+                inProgressCount,
+                submittedCount,
+                averageScore,
+                List.copyOf(roster)
+        );
+    }
+
+    public TeacherAssessmentAttemptResultVO getTeacherAttemptResult(Long attemptId) {
+        AttemptBundle bundle = requireAccessibleAttemptForTeacher(attemptId);
+        LocalDateTime now = LocalDateTime.now();
+        AssessmentAttemptEntity attempt = finalizeExpiredAttemptIfNecessary(bundle.attempt(), bundle.publish(), now);
+        if (!AssessmentAttemptStatus.SUBMITTED.name().equalsIgnoreCase(attempt.getStatus())) {
+            throw new BusinessException(ResultCode.CONFLICT, "Assessment attempt is still in progress", 409);
+        }
+
+        List<AssessmentAttemptAnswerEntity> answers = loadAttemptAnswers(attempt.getId());
+        int correctCount = (int) answers.stream().filter(answer -> Boolean.TRUE.equals(answer.getCorrect())).count();
+        UserEntity student = userMapper.selectById(attempt.getStudentUserId());
+        return new TeacherAssessmentAttemptResultVO(
+                attempt.getId(),
+                bundle.publish().getId(),
+                bundle.publish().getPaperId(),
+                bundle.publish().getTeachingClassId(),
+                attempt.getStudentUserId(),
+                resolveUserDisplayName(student),
+                bundle.publish().getPaperTitleSnapshot(),
+                bundle.publish().getPaperDescriptionSnapshot(),
+                bundle.teachingClass().getClassName(),
+                attempt.getStatus(),
+                bundle.publish().getInstructionsText(),
+                bundle.publish().getQuestionCountSnapshot(),
+                attempt.getAnsweredCount(),
+                correctCount,
+                attempt.getObjectiveScore(),
+                attempt.getTotalScore(),
+                attempt.getStartedAt(),
+                attempt.getExpiresAt(),
+                attempt.getSubmittedAt(),
+                answers.stream().map(this::toAttemptResultQuestion).toList()
+        );
+    }
+
     private AssessmentPaperDetailVO buildPaperDetail(AssessmentPaperEntity paper) {
         List<AssessmentQuestionEntity> questions = loadQuestionsByPaper(paper.getId());
         List<AssessmentPublishEntity> publishes = assessmentPublishMapper.selectList(Wrappers.<AssessmentPublishEntity>lambdaQuery()
@@ -406,26 +607,23 @@ public class AssessmentService {
         Map<Long, TeachingClassEntity> classMap = loadTeachingClassMap(
                 publishes.stream().map(AssessmentPublishEntity::getTeachingClassId).toList()
         );
-        Map<Long, List<AssessmentAttemptEntity>> attemptsByPublishId = new LinkedHashMap<>();
-        if (!publishes.isEmpty()) {
-            attemptsByPublishId = assessmentAttemptMapper.selectList(Wrappers.<AssessmentAttemptEntity>lambdaQuery()
-                            .in(AssessmentAttemptEntity::getPublishId, publishes.stream().map(AssessmentPublishEntity::getId).toList()))
-                    .stream()
-                    .collect(Collectors.groupingBy(AssessmentAttemptEntity::getPublishId, LinkedHashMap::new, Collectors.toList()));
-        }
+        Map<Long, List<AssessmentAttemptEntity>> attemptsByPublishId = loadAttemptGroupsByPublishId(publishes);
+        Map<Long, Integer> assignedCountByPublishId = loadAssignedCountByPublishId(publishes.stream()
+                .map(AssessmentPublishEntity::getId)
+                .toList());
+        LocalDateTime now = LocalDateTime.now();
 
         List<AssessmentPublishSummaryVO> publishSummaries = publishes.stream()
                 .map(publish -> {
                     List<AssessmentAttemptEntity> attempts = attemptsByPublishId.getOrDefault(publish.getId(), List.of());
                     TeachingClassEntity teachingClass = classMap.get(publish.getTeachingClassId());
-                    int submittedCount = (int) attempts.stream()
-                            .filter(attempt -> AssessmentAttemptStatus.SUBMITTED.name().equalsIgnoreCase(attempt.getStatus()))
-                            .count();
+                    PublishStats stats = calculatePublishStats(publish, attempts, assignedCountByPublishId.getOrDefault(publish.getId(), 0), now);
                     return buildPublishSummary(
                             publish,
                             teachingClass == null ? "未知班级" : teachingClass.getClassName(),
-                            attempts.size(),
-                            submittedCount
+                            stats.assignedCount(),
+                            stats.attemptCount(),
+                            stats.submittedCount()
                     );
                 })
                 .toList();
@@ -448,9 +646,12 @@ public class AssessmentService {
     private AssessmentPublishSummaryVO buildPublishSummary(
             AssessmentPublishEntity publish,
             String className,
+            Integer assignedCount,
             Integer attemptCount,
             Integer submittedCount
     ) {
+        int safeAssignedCount = assignedCount == null ? 0 : assignedCount;
+        int safeSubmittedCount = submittedCount == null ? 0 : submittedCount;
         return new AssessmentPublishSummaryVO(
                 publish.getId(),
                 publish.getTeachingClassId(),
@@ -463,8 +664,10 @@ public class AssessmentService {
                 publish.getStartsAt(),
                 publish.getDueAt(),
                 publish.getPublishedAt(),
+                safeAssignedCount,
                 attemptCount,
-                submittedCount
+                safeSubmittedCount,
+                Math.max(0, safeAssignedCount - safeSubmittedCount)
         );
     }
 
@@ -764,6 +967,160 @@ public class AssessmentService {
         return publish.getDueAt() != null && !now.isBefore(publish.getDueAt());
     }
 
+    private void snapshotRecipients(AssessmentPublishEntity publish) {
+        List<Long> studentIds = teachingClassService.listActiveStudentIds(
+                publish.getTeachingClassId(),
+                publish.getPublishedAt() == null ? LocalDateTime.now() : publish.getPublishedAt()
+        );
+        for (Long studentId : studentIds) {
+            AssessmentPublishRecipientEntity recipient = new AssessmentPublishRecipientEntity();
+            recipient.setPublishId(publish.getId());
+            recipient.setPaperId(publish.getPaperId());
+            recipient.setTeachingClassId(publish.getTeachingClassId());
+            recipient.setStudentUserId(studentId);
+            assessmentPublishRecipientMapper.insert(recipient);
+        }
+    }
+
+    private List<AssessmentPublishRecipientEntity> loadRecipientsByPublish(Long publishId) {
+        return assessmentPublishRecipientMapper.selectList(Wrappers.<AssessmentPublishRecipientEntity>lambdaQuery()
+                .eq(AssessmentPublishRecipientEntity::getPublishId, publishId)
+                .orderByAsc(AssessmentPublishRecipientEntity::getStudentUserId)
+                .orderByAsc(AssessmentPublishRecipientEntity::getId));
+    }
+
+    private Map<Long, Integer> loadAssignedCountByPublishId(Collection<Long> publishIds) {
+        LinkedHashSet<Long> deduplicated = publishIds.stream()
+                .filter(Objects::nonNull)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        if (deduplicated.isEmpty()) {
+            return Map.of();
+        }
+        return assessmentPublishRecipientMapper.selectList(Wrappers.<AssessmentPublishRecipientEntity>lambdaQuery()
+                        .in(AssessmentPublishRecipientEntity::getPublishId, deduplicated))
+                .stream()
+                .collect(Collectors.groupingBy(
+                        AssessmentPublishRecipientEntity::getPublishId,
+                        LinkedHashMap::new,
+                        Collectors.collectingAndThen(Collectors.counting(), Long::intValue)
+                ));
+    }
+
+    private Map<Long, List<AssessmentAttemptEntity>> loadAttemptGroupsByPublishId(List<AssessmentPublishEntity> publishes) {
+        if (publishes.isEmpty()) {
+            return Map.of();
+        }
+        return assessmentAttemptMapper.selectList(Wrappers.<AssessmentAttemptEntity>lambdaQuery()
+                        .in(AssessmentAttemptEntity::getPublishId, publishes.stream().map(AssessmentPublishEntity::getId).toList()))
+                .stream()
+                .collect(Collectors.groupingBy(
+                        AssessmentAttemptEntity::getPublishId,
+                        LinkedHashMap::new,
+                        Collectors.toList()
+                ));
+    }
+
+    private Map<Long, AssessmentAttemptEntity> loadAttemptMapByPublishAndStudent(
+            Long publishId,
+            List<AssessmentPublishRecipientEntity> recipients
+    ) {
+        if (recipients.isEmpty()) {
+            return Map.of();
+        }
+        return assessmentAttemptMapper.selectList(Wrappers.<AssessmentAttemptEntity>lambdaQuery()
+                        .eq(AssessmentAttemptEntity::getPublishId, publishId)
+                        .in(AssessmentAttemptEntity::getStudentUserId, recipients.stream()
+                                .map(AssessmentPublishRecipientEntity::getStudentUserId)
+                                .toList()))
+                .stream()
+                .collect(Collectors.toMap(
+                        AssessmentAttemptEntity::getStudentUserId,
+                        Function.identity(),
+                        (left, right) -> {
+                            if (left.getStartedAt() == null) {
+                                return right;
+                            }
+                            if (right.getStartedAt() == null) {
+                                return left;
+                            }
+                            return right.getStartedAt().isAfter(left.getStartedAt()) ? right : left;
+                        },
+                        LinkedHashMap::new
+                ));
+    }
+
+    private Map<Long, AssessmentPublishEntity> loadPublishMap(Collection<Long> publishIds) {
+        LinkedHashSet<Long> deduplicated = publishIds.stream()
+                .filter(Objects::nonNull)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        if (deduplicated.isEmpty()) {
+            return Map.of();
+        }
+        return assessmentPublishMapper.selectBatchIds(deduplicated).stream()
+                .filter(Objects::nonNull)
+                .collect(Collectors.toMap(
+                        AssessmentPublishEntity::getId,
+                        Function.identity(),
+                        (left, right) -> left,
+                        LinkedHashMap::new
+                ));
+    }
+
+    private Map<Long, String> loadUserDisplayNameMap(Collection<Long> userIds) {
+        LinkedHashSet<Long> deduplicated = userIds.stream()
+                .filter(Objects::nonNull)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        if (deduplicated.isEmpty()) {
+            return Map.of();
+        }
+        return userMapper.selectBatchIds(deduplicated).stream()
+                .filter(Objects::nonNull)
+                .collect(Collectors.toMap(
+                        UserEntity::getId,
+                        this::resolveUserDisplayName,
+                        (left, right) -> left,
+                        LinkedHashMap::new
+                ));
+    }
+
+    private String resolveUserDisplayName(UserEntity user) {
+        if (user == null) {
+            return "未知用户";
+        }
+        if (user.getDisplayName() != null && !user.getDisplayName().isBlank()) {
+            return user.getDisplayName();
+        }
+        if (user.getUsername() != null && !user.getUsername().isBlank()) {
+            return user.getUsername();
+        }
+        return "用户 #" + user.getId();
+    }
+
+    private PublishStats calculatePublishStats(
+            AssessmentPublishEntity publish,
+            List<AssessmentAttemptEntity> attempts,
+            int assignedCount,
+            LocalDateTime now
+    ) {
+        int submittedCount = 0;
+        int inProgressCount = 0;
+        for (AssessmentAttemptEntity attempt : attempts) {
+            if (AssessmentAttemptStatus.SUBMITTED.name().equalsIgnoreCase(attempt.getStatus())
+                    || isAttemptExpired(attempt, publish, now)) {
+                submittedCount++;
+            } else if (AssessmentAttemptStatus.IN_PROGRESS.name().equalsIgnoreCase(attempt.getStatus())) {
+                inProgressCount++;
+            }
+        }
+        return new PublishStats(
+                assignedCount,
+                attempts.size(),
+                submittedCount,
+                Math.max(0, assignedCount - submittedCount - inProgressCount),
+                inProgressCount
+        );
+    }
+
     private AssessmentAttemptEntity loadAttemptByPublishAndStudent(Long publishId, Long studentUserId) {
         return assessmentAttemptMapper.selectOne(Wrappers.<AssessmentAttemptEntity>lambdaQuery()
                 .eq(AssessmentAttemptEntity::getPublishId, publishId)
@@ -792,6 +1149,19 @@ public class AssessmentService {
         return new AttemptBundle(attempt, publish, teachingClass);
     }
 
+    private AttemptBundle requireAccessibleAttemptForTeacher(Long attemptId) {
+        AssessmentAttemptEntity attempt = assessmentAttemptMapper.selectById(attemptId);
+        if (attempt == null) {
+            throw new BusinessException(ResultCode.NOT_FOUND, "Assessment attempt was not found", 404);
+        }
+        AssessmentPublishEntity publish = requireAccessiblePublishForTeacher(attempt.getPublishId());
+        TeachingClassEntity teachingClass = teachingClassMapper.selectById(publish.getTeachingClassId());
+        if (teachingClass == null) {
+            throw new BusinessException(ResultCode.NOT_FOUND, "Teaching class was not found", 404);
+        }
+        return new AttemptBundle(attempt, publish, teachingClass);
+    }
+
     private AssessmentPublishEntity requireAccessiblePublishForStudent(Long publishId, Long studentUserId) {
         AssessmentPublishEntity publish = assessmentPublishMapper.selectById(publishId);
         if (publish == null) {
@@ -800,7 +1170,24 @@ public class AssessmentService {
         if (!AssessmentPublishStatus.PUBLISHED.name().equalsIgnoreCase(publish.getStatus())) {
             throw new BusinessException(ResultCode.CONFLICT, "Assessment publish is not available", 409);
         }
-        teachingClassService.requireStudentInClass(publish.getTeachingClassId(), studentUserId);
+        AssessmentPublishRecipientEntity recipient = assessmentPublishRecipientMapper.selectOne(
+                Wrappers.<AssessmentPublishRecipientEntity>lambdaQuery()
+                        .eq(AssessmentPublishRecipientEntity::getPublishId, publishId)
+                        .eq(AssessmentPublishRecipientEntity::getStudentUserId, studentUserId)
+                        .last("LIMIT 1")
+        );
+        if (recipient == null) {
+            throw new BusinessException(ResultCode.NOT_FOUND, "Assessment publish was not assigned to this student", 404);
+        }
+        return publish;
+    }
+
+    private AssessmentPublishEntity requireAccessiblePublishForTeacher(Long publishId) {
+        AssessmentPublishEntity publish = assessmentPublishMapper.selectById(publishId);
+        if (publish == null) {
+            throw new BusinessException(ResultCode.NOT_FOUND, "Assessment publish was not found", 404);
+        }
+        teachingClassService.requireAccessibleClass(publish.getTeachingClassId());
         return publish;
     }
 
@@ -921,6 +1308,15 @@ public class AssessmentService {
             AssessmentAttemptEntity attempt,
             AssessmentPublishEntity publish,
             TeachingClassEntity teachingClass
+    ) {
+    }
+
+    private record PublishStats(
+            int assignedCount,
+            int attemptCount,
+            int submittedCount,
+            int notStartedCount,
+            int inProgressCount
     ) {
     }
 
